# Chiplet_sniper

./: LICENSE  README.en.md  README.md  manual.md  说明.docx
delay_analyze/: CMakeLists.txt  delay_analyze.cpp  popnet_delay_info_transfer.cpp
interchiplet/: CMakeLists.txt  interchiplet.cpp
interchiplet_app/: CMakeLists.txt  interchiplet_app.cpp  interchiplet_app.h  interchiplet_app_core.cpp  interchiplet_app_core.h
popnet/: configuration.cc  delayInfo.txt  index.h  main.cc  mess_queue.cc  mess_queue.h  sim_foundation.cc  sim_foundation.h  sim_router.cc  sim_router.h  sim_routing.cc
power_calculate/: CMakeLists.txt  power_calculate.cpp  star_topo_power_calculate.cpp
record_combine/: CMakeLists.txt  popnet_trace_transfer.cpp  random_phy_records.cpp  record_combine.cpp
sniper/: .gitignore  CHANGELOG  COMPILATION  CONTRIBUTORS  Doxyfile  LICENSE  LICENSE.interval  Makefile.config  NOTICE  README  README.riscv  pin_rev_def.h
sniper/common/: Makefile  Makefile.common
sniper/config/: atd.cfg  base.cfg  beckton.cfg  cacheonly.cfg  dram-cache.cfg  dunnington.cfg  dunnington16.cfg  gainestown.cfg  interval.cfg  jikes.cfg  kingscross.cfg  llc-qbs.cfg  nehalem-lite.cfg  nehalem.cfg  noc.cfg  nuca-cache.cfg  oneipc.cfg  prefetcher.cfg  riscv-mediumboom.cfg  riscv.cfg  rob.cfg  sampling.cfg  silvermont.cfg  smt1.cfg  smt2.cfg  smt4.cfg  smt8.cfg
sniper/decoder_lib/: Makefile  decoder.cc  decoder.h  riscv_decoder.cc  riscv_decoder.h  x86_decoder.cc  x86_decoder.h
sniper/docker/: Dockerfile-ubuntu-16.04  Dockerfile-ubuntu-18.04  Makefile
sniper/frontend/: Doxyfile  (+24 more)
(+743 files in other folders)
